@@ -88,7 +88,7 @@
 
 
 (defun set-default-second-keys ()
-  (define-second-key ("F1" :mod-4) 'help-on-clfswm)
+  (define-second-key ("F1" :prefix) 'help-on-clfswm)
   (define-second-key ("m") 'open-menu)
   (define-second-key ("less") 'open-menu)
   (define-second-key ("less" :control) 'open-menu)
@@ -109,25 +109,25 @@
   (define-second-key ("Return") 'leave-second-mode)
   (define-second-key ("Escape") 'leave-second-mode)
   (define-second-key ("t" :shift) 'tile-current-frame)
-  (define-second-key ("Home" :mod-4 :control :shift) 'exit-clfswm)
-  (define-second-key ("Right" :mod-4) 'select-next-brother)
-  (define-second-key ("Left" :mod-4) 'select-previous-brother)
+  (define-second-key ("Home" :prefix :control :shift) 'exit-clfswm)
+  (define-second-key ("Right" :prefix) 'select-next-brother)
+  (define-second-key ("Left" :prefix) 'select-previous-brother)
 
-  (define-second-key ("Right" :mod-4 :shift) 'select-next-brother-take-current)
-  (define-second-key ("Left" :mod-4 :shift) 'select-previous-brother-take-current)
+  (define-second-key ("Right" :prefix :shift) 'select-next-brother-take-current)
+  (define-second-key ("Left" :prefix :shift) 'select-previous-brother-take-current)
 
-  (define-second-key ("Down" :mod-4) 'select-previous-level)
-  (define-second-key ("Up" :mod-4) 'select-next-level)
+  (define-second-key ("Down" :prefix) 'select-previous-level)
+  (define-second-key ("Up" :prefix) 'select-next-level)
 
-  (define-second-key ("Left" :control :mod-4) 'select-brother-spatial-move-left)
-  (define-second-key ("Right" :control :mod-4) 'select-brother-spatial-move-right)
-  (define-second-key ("Up" :control :mod-4) 'select-brother-spatial-move-up)
-  (define-second-key ("Down" :control :mod-4) 'select-brother-spatial-move-down)
+  (define-second-key ("Left" :control :prefix) 'select-brother-spatial-move-left)
+  (define-second-key ("Right" :control :prefix) 'select-brother-spatial-move-right)
+  (define-second-key ("Up" :control :prefix) 'select-brother-spatial-move-up)
+  (define-second-key ("Down" :control :prefix) 'select-brother-spatial-move-down)
 
-  (define-second-key ("Left" :control :mod-4 :shift) 'select-brother-spatial-move-left-take-current)
-  (define-second-key ("Right" :control :mod-4 :shift) 'select-brother-spatial-move-right-take-current)
-  (define-second-key ("Up" :control :mod-4 :shift) 'select-brother-spatial-move-up-take-current)
-  (define-second-key ("Down" :control :mod-4 :shift) 'select-brother-spatial-move-down-take-current)
+  (define-second-key ("Left" :control :prefix :shift) 'select-brother-spatial-move-left-take-current)
+  (define-second-key ("Right" :control :prefix :shift) 'select-brother-spatial-move-right-take-current)
+  (define-second-key ("Up" :control :prefix :shift) 'select-brother-spatial-move-up-take-current)
+  (define-second-key ("Down" :control :prefix :shift) 'select-brother-spatial-move-down-take-current)
 
   (define-second-key ("j") 'swap-frame-geometry)
   (define-second-key ("h") 'rotate-frame-geometry)
@@ -146,20 +146,20 @@
   (define-second-key ("Up" :control) 'speed-mouse-first-history)
   (define-second-key ("Down" :control) 'speed-mouse-reset)
 
-  (define-second-key ("Tab" :mod-4) 'select-next-child)
-  (define-second-key ("Tab" :mod-4 :shift) 'select-previous-child)
-  (define-second-key ("Tab" :mod-4 :control) 'select-next-subchild)
+  (define-second-key ("Tab" :prefix) 'select-next-child)
+  (define-second-key ("Tab" :prefix :shift) 'select-previous-child)
+  (define-second-key ("Tab" :prefix :control) 'select-next-subchild)
   (define-second-key ("Tab") 'switch-to-last-child)
-  (define-second-key ("Return" :mod-4) 'enter-frame)
-  (define-second-key ("Return" :mod-4 :shift) 'leave-frame)
-  (define-second-key ("Return" :mod-4 :control) 'frame-toggle-maximize)
+  (define-second-key ("Return" :prefix) 'enter-frame)
+  (define-second-key ("Return" :prefix :shift) 'leave-frame)
+  (define-second-key ("Return" :prefix :control) 'frame-toggle-maximize)
   (define-second-key ("Return" :mod-5) 'frame-toggle-maximize)
-  (define-second-key ("Page_Up" :mod-4) 'frame-lower-child)
-  (define-second-key ("Page_Down" :mod-4) 'frame-raise-child)
-  (define-second-key ("Home" :mod-4) 'switch-to-root-frame)
-  (define-second-key ("Home" :mod-4 :shift) 'switch-and-select-root-frame)
+  (define-second-key ("Page_Up" :prefix) 'frame-lower-child)
+  (define-second-key ("Page_Down" :prefix) 'frame-raise-child)
+  (define-second-key ("Home" :prefix) 'switch-to-root-frame)
+  (define-second-key ("Home" :prefix :shift) 'switch-and-select-root-frame)
   (define-second-key ("Menu") 'toggle-show-root-frame)
-  (define-second-key ("b" :mod-4) 'banish-pointer)
+  (define-second-key ("b" :prefix) 'banish-pointer)
   (define-second-key ("o") 'set-open-in-new-frame-in-parent-frame-nw-hook)
   (define-second-key ("o" :control) 'set-open-in-new-frame-in-root-frame-nw-hook)
   (define-second-key ("a") 'add-default-frame)
@@ -172,7 +172,7 @@
   (define-second-key ("Escape" :control) 'ask-close/kill-current-window)
   ;; Selection
   (define-second-key ("x" :control) 'cut-current-child)
-  (define-second-key ("x" :control :mod-4) 'clear-selection)
+  (define-second-key ("x" :control :prefix) 'clear-selection)
   (define-second-key ("c" :control) 'copy-current-child)
   (define-second-key ("v" :control) 'paste-selection)
   (define-second-key ("v" :control :shift) 'paste-selection-no-clear)
@@ -183,23 +183,23 @@
   (define-shell ("e" :control) b-start-emacsremote
     "start an emacs for another user"
     "exec xterm -e emacsremote")
-  (define-second-key ("F10" :mod-4) 'fast-layout-switch)
+  (define-second-key ("F10" :prefix) 'fast-layout-switch)
   (define-second-key ("F10" :shift :control) 'toggle-show-root-frame)
   (define-second-key ("F10") 'expose-windows-mode)
   (define-second-key ("F10" :control) 'expose-all-windows-mode)
   (define-second-key ("F12" :shift) 'show-all-frames-info-key)
-  (define-second-key ("F12" :shift :mod-4) 'show-all-frames-info)
+  (define-second-key ("F12" :shift :prefix) 'show-all-frames-info)
   ;; Bind or jump functions
-  (define-second-key ("1" :mod-4) 'bind-or-jump 1)
-  (define-second-key ("2" :mod-4) 'bind-or-jump 2)
-  (define-second-key ("3" :mod-4) 'bind-or-jump 3)
-  (define-second-key ("4" :mod-4) 'bind-or-jump 4)
-  (define-second-key ("5" :mod-4) 'bind-or-jump 5)
-  (define-second-key ("6" :mod-4) 'bind-or-jump 6)
-  (define-second-key ("7" :mod-4) 'bind-or-jump 7)
-  (define-second-key ("8" :mod-4) 'bind-or-jump 8)
-  (define-second-key ("9" :mod-4) 'bind-or-jump 9)
-  (define-second-key ("0" :mod-4) 'bind-or-jump 10)
+  (define-second-key ("1" :prefix) 'bind-or-jump 1)
+  (define-second-key ("2" :prefix) 'bind-or-jump 2)
+  (define-second-key ("3" :prefix) 'bind-or-jump 3)
+  (define-second-key ("4" :prefix) 'bind-or-jump 4)
+  (define-second-key ("5" :prefix) 'bind-or-jump 5)
+  (define-second-key ("6" :prefix) 'bind-or-jump 6)
+  (define-second-key ("7" :prefix) 'bind-or-jump 7)
+  (define-second-key ("8" :prefix) 'bind-or-jump 8)
+  (define-second-key ("9" :prefix) 'bind-or-jump 9)
+  (define-second-key ("0" :prefix) 'bind-or-jump 10)
   ;;; Transparency
   (define-second-key ("t" :control :shift) 'key-inc-transparency)
   (define-second-key ("t" :control) 'key-dec-transparency))
@@ -291,14 +291,14 @@ Or do corners actions"
   (define-second-mouse (1) 'sm-mouse-click-to-focus-and-move)
   (define-second-mouse (2) 'sm-mouse-middle-click)
   (define-second-mouse (3) 'sm-mouse-click-to-focus-and-resize)
-  (define-second-mouse (1 :mod-4) 'sm-mouse-click-to-focus-and-move-window)
-  (define-second-mouse (3 :mod-4) 'sm-mouse-click-to-focus-and-resize-window)
-  (define-second-mouse (1 :mod-4 :shift) 'sm-mouse-click-to-focus-and-move-window-constrained)
-  (define-second-mouse (3 :mod-4 :shift) 'sm-mouse-click-to-focus-and-resize-window-constrained)
-  (define-second-mouse (1 :control :mod-4) 'mouse-move-child-over-frame)
+  (define-second-mouse (1 :prefix) 'sm-mouse-click-to-focus-and-move-window)
+  (define-second-mouse (3 :prefix) 'sm-mouse-click-to-focus-and-resize-window)
+  (define-second-mouse (1 :prefix :shift) 'sm-mouse-click-to-focus-and-move-window-constrained)
+  (define-second-mouse (3 :prefix :shift) 'sm-mouse-click-to-focus-and-resize-window-constrained)
+  (define-second-mouse (1 :control :prefix) 'mouse-move-child-over-frame)
   (define-second-mouse (4) 'sm-mouse-select-next-level)
   (define-second-mouse (5) 'sm-mouse-select-previous-level)
-  (define-second-mouse (4 :mod-4) 'sm-mouse-enter-frame)
-  (define-second-mouse (5 :mod-4) 'sm-mouse-leave-frame))
+  (define-second-mouse (4 :prefix) 'sm-mouse-enter-frame)
+  (define-second-mouse (5 :prefix) 'sm-mouse-leave-frame))
 
 (add-hook *binding-hook* 'set-default-second-mouse)
