@@ -190,6 +190,17 @@ Write (defparameter *contrib-dir* \"/usr/local/lib/clfswm/\") in ~A.~%"
   (show-current-root)
   (leave-second-mode))
 
+(defun add-new-root ()
+  "Add new root to the list of roots"
+  (let* ((root (find-root (current-child)))
+         (newroot (create-frame))
+         (x (query-number "New root X position" (root-x root)))
+         (y (query-number "New root Y position" (root-y root)))
+         (w (query-number "New root widht" (root-w root)))
+         (h (query-number "New root height" (root-h root))))
+    (add-frame newroot *root-frame*)
+    (define-as-root newroot x y w h)))
+
 (defun change-current-root-geometry ()
   "Change the current root geometry"
   (let* ((root (find-root (current-child)))
@@ -280,7 +291,21 @@ Write (defparameter *contrib-dir* \"/usr/local/lib/clfswm/\") in ~A.~%"
       (leave-second-mode))))
 
 
+(defun add-empty-frame ()
+  "Add an empty frame in the current frame"
+  (when (frame-p (current-child))
+    (push (create-frame) (frame-child (current-child))))
+  (leave-second-mode))
 
+(defun add-empty-or-wrap-frame ()
+  "Add an empty frame in the current frame or wrap around the current child"
+  (if (frame-p (current-child))
+      (push (create-frame) (frame-child (current-child)))
+      (let ((frame (create-frame))
+            (parent (find-parent-frame (current-child))))
+        (push frame (frame-child parent))
+        (push (current-child) (frame-child frame))))
+  (leave-second-mode))
 
 (defun add-default-frame ()
   "Add a default frame in the current frame"
