@@ -65,7 +65,8 @@ It is particulary useful with CLISP/MIT-CLX.")
 
 
 
-(defparameter *modifier-alias* '((:alt :mod-1)     (:alt-l :mod-1)
+(defparameter *modifier-alias* '((:prefix :mod-4)
+				 (:alt :mod-1)  (:alt-l :mod-1)
 				 (:numlock :mod-2)
 				 (:super_l :mod-4)
 				 (:alt-r :mod-5)   (:alt-gr :mod-5)
